--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-ipython==7.6.1
-matplotlib==3.1.1
-numpy==1.16.4
-pandas==0.25.0
-scikit-learn==0.21.2
-scipy==1.3.0
-sklearn==0.0
-statsmodels==0.10.1
+pandas==1.4.2
+numpy==1.22.3
+pytz==2022.1
+statsmodels==0.13.2
+scipy==1.8.0
+openpyxl==3.0.9
+matplotlib==3.7.0
+rpy2==3.5.1
+tables==3.7.0
